infra/k8s/base/kafka-service-mapping.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: kafka
spec:
  type: ExternalName
  externalName: kafka-kafka-bootstrap.kafka.svc.cluster.local
